--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Ronan Byan</title>
 </head>
 <body>
-    <img src="/images/RonanB.jpg" width="45%" align="right">
+    <img src="RonanB.jpg" width="45%" align="right">
     <h1>Ronan Byan</h1>
 </body>
 </html>
