--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6616254609467898"
+     crossorigin="anonymous"></script>
     <title>Ronan Byan</title>
 </head>
 <body>
-    <img src="RonanB.jpg" width="45%" align="right">
-    <h1>Ronan Byan</h1>
+    <div width="250">
+        <img src="/images/RonanB.jpg" width="25%" align="right">
+        <h1>Ronan Byan</h1>
+    </div>
 </body>
 </html>
