--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div width="250">
-        <img src="/images/RonanB.jpg" width="25%" align="right">
+        <img src="RonanB.jpg" width="25%" align="right">
         <h1>Ronan Byan</h1>
     </div>
 </body>
